--- a/web3_tp_final/web3_tp_final/Views/Shared/_Layout.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
                         }
                         <li class="nav-item dropdown website-navbar-link">
                             <a class="nav-link text-white dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Liens Temporaires
+                                Liens de tests
                             </a>
                             <div class="dropdown-menu website-navbar-dropdown" aria-labelledby="navbarDropdownMenuLink">
                                 <h6 class="dropdown-header">Mock Generation</h6>
