--- a/web3_tp_final/web3_tp_final/Views/Home/Index.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Home/Index.cshtml
@@ -22,29 +22,21 @@
 
     <div class="row">
 
-        <div class="col">
+        <div class="col-lg-6 mb-3 d-flex align-items-stretch">
             <div class="card bg-neutral-100 m-3 p-3">
-                <div class="split">
-                    <div class="d-flex align-items-center">
-                        <h2>Faites garder votre animal lorsque vous en avez besoin</h2>
-                    </div>
-                    <div>
-                        <img src="~/images/pet_clock.jpg" class="img-size padding-image-accueil" />
-                    </div>
+                <img src="~/images/pet_clock.jpg" class="card-img-top" alt="Dog Clock">
+                <div class="card-body d-flex flex-column">
+                    <p class="card-text mb-4">Faites garder votre animal lorsque vous en avez besoin</p>
                 </div>
             </div>
             <a class="stretched-link" asp-controller="FindSitter" asp-action="Index"></a>
         </div>
 
-        <div class="col">
+        <div class="col-lg-6 mb-3 d-flex align-items-stretch">
             <div class="card bg-primary-200 m-3 p-3">
-                <div class="split">
-                    <div class="d-flex align-items-center">
-                        <h2>Créez un compte pour vous et pour votre animal</h2>
-                    </div>
-                    <div>
-                        <img src="~/images/chienchat.jpg" class="img-size padding-image-accueil" />
-                    </div>
+                <img src="~/images/chienchat.jpg" class="card-img-top" alt="Dog and Cat">
+                <div class="card-body d-flex flex-column">
+                    <p class="card-text mb-4">Créez un compte pour vous et vos animaux</p>
                 </div>
             </div>
             <a class="stretched-link" asp-controller="Login" asp-action="Index"></a>
@@ -54,28 +46,20 @@
 
     <div class="row">
 
-        <div class="col">
+        <div class="col-lg-6 mb-3 d-flex align-items-stretch">
             <div class="card bg-primary-400 m-3 p-3">
-                <div class="split">
-                    <div>
-                        <img src="~/images/grenouilleordi.jpg" class="img-size padding-image-accueil" />
-                    </div>
-                    <div class="d-flex align-items-center">
-                        <h2>Communiquez entre utilisateurs pour fixer des dates</h2>
-                    </div>
+                <img src="~/images/grenouilleordi.jpg" class="card-img-top" alt="Frog and Keyboard">
+                <div class="card-body d-flex flex-column">
+                    <p class="card-text mb-4">Communiquez entre utilisateurs pour fixer des dates</p>
                 </div>
             </div>
         </div>
 
-        <div class="col">
+        <div class="col-lg-6 mb-3 d-flex align-items-stretch">
             <div class="card bg-neutral-200 m-3 p-3">
-                <div class="split">
-                    <div>
-                        <img src="~/images/pet_reviews.jpg" class="img-size padding-image-accueil" />
-                    </div>
-                    <div class="d-flex align-items-center">
-                        <h2>Évaluez les gardiens pour améliorer l'expérience de tous</h2>
-                    </div>
+                <img src="~/images/pet_reviews.jpg" class="card-img-top" alt="Pet Reviews">
+                <div class="card-body d-flex flex-column">
+                    <p class="card-text mb-4">Évaluez les gardiens pour améliorer l'expérience de tous</p>
                 </div>
             </div>
         </div>
@@ -86,3 +70,4 @@
 <script>
     $('#website-body').addClass('website-background');
 </script>
+
