--- a/web3_tp_final/web3_tp_final/Views/Shared/_GlobalModal.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Shared/_GlobalModal.cshtml
@@ -1,13 +1,13 @@
 ﻿<div class="modal fade" id="SitAPupModal" tabindex="-1" role="dialog" aria-labelledby="SitAPupModal" aria-hidden="true">
-    <div class="modal-dialog" role="document">
+    <div class="modal-dialog" role="document" id="ModalSize">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="SitAPupModalLabel">Modal title</h5>
+                <h5 class="modal-title" id="SitAPupModalTitle">Modal title</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <div class="modal-body">
+            <div class="modal-body p-0" id="modal-body">
                 ...
             </div>
         </div>
