--- a/web3_tp_final/web3_tp_final/Views/Shared/_Layout.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Shared/_Layout.cshtml
@@ -15,8 +15,11 @@
     <script src="~/lib/select2/js/select2.js"></script>
     <script src="~/js/signalr/dist/browser/signalr.js"></script>
     <script src="~/js/notification.js"></script>
+    <script src="~/js/site.js"></script>
+    <script src="~/js/FormValidator.js"></script>
 </head>
 <body>
+    @Html.Partial("_GlobalModal")
     <div id="website-body" class="container-fluid pl-0 pr-0">
         <div class="sticky-top">
             <nav class="navbar navbar-expand-lg navbar-light website-navbar">
