--- a/web3_tp_final/web3_tp_final/wwwroot/css/mystyle.css
+++ b/web3_tp_final/web3_tp_final/wwwroot/css/mystyle.css
@@ -310,7 +310,6 @@ section {
 
 #UserDetailsCard {
     border-radius: 10px;
-    margin-top: 20px;
 }
 
 #UserSection {
@@ -402,4 +401,18 @@ section {
 
 .sap-card-content-info {
     color: #919aa3 !important;
+}
+
+.modal-header {
+    background: linear-gradient(to right, rgb(107 59 43 / 86%), rgb(161 93 24 / 75%));
+    color: white;
+    border-radius: 20px 20px 0 0;
+}
+
+.modal-content {
+    border-radius: 20px;
+}
+
+#AppointmentFormErrorAlert {
+    display: none;
 }
