--- a/web3_tp_final/web3_tp_final/Views/Users/Details.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Users/Details.cshtml
@@ -9,11 +9,11 @@
 </head>
     <h1 class="text-center margin">Details</h1>    
     <div class="row margin">
-        <div class="col-6" id="UserDetailsCard">
+        <div class="col-md-12 col-lg-6 mb-3" id="UserDetailsCard">
             <form class="form" asp-action="Edit">
                 <div class="row">
-                    <div class="col-3" id="UserSection">
-                        <div class="h-75 text-center w-100 d-flex" style="align-items:center;">
+                    <div class="col-md-3 col-sm-12" id="UserSection">
+                        <div class="h-75 text-center w-100 d-flex mb-2" style="align-items:center;">
                             <div class="w-100">
                                 <img src="https://img.icons8.com/bubbles/100/000000/user.png" class="mx-auto" />
                                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -21,23 +21,25 @@
                                 <span asp-validation-for="UserName" class="text-danger" data-color="caramel"></span>
                             </div>
                         </div>
-                        <div class="row align-items-center">
+                        <div class="row align-items-center no-gutters mb-2">
                             @if (ViewBag.CurrentID != null && ViewBag.CurrentID != Model.UserID)
                             {
-                                <div class="col-6">
+                                <div class="col-5">
                                     <a id="BookAppointmentModal" asp-controller="FindSitter" asp-route-id="@Model.UserID" asp-action="BookAppointment">
-                                        <img src="https://img.icons8.com/external-prettycons-solid-prettycons/60/ffffff/external-appointment-business-and-finance-prettycons-solid-prettycons.png" class="btn bouton-size"/>
+                                        <img src="https://img.icons8.com/external-prettycons-solid-prettycons/60/ffffff/external-appointment-business-and-finance-prettycons-solid-prettycons.png" class="btn bouton-size" />
                                     </a>
                                 </div>
-                                <div class="col-6">
+                                <div class="col-2 w-100">
+                                </div>
+                                <div class="col-5">
                                     <a asp-controller="Chat" asp-route-id="@Model.UserID" asp-action="Index">
-                                        <img src="https://img.icons8.com/ios-glyphs/30/ffffff/chat.png" class="btn bouton-size"/>                                    
+                                        <img src="https://img.icons8.com/ios-glyphs/30/ffffff/chat.png" class="btn bouton-size" />
                                     </a>
                                 </div>
                             }
-                                </div>
+                        </div>
                             </div>
-                    <div class="col-9" id="UserInputInfo">
+                    <div class="col-md-9 col-sm-12" id="UserInputInfo">
                         <div class="row">
                             <div class="col-12 User-information-main-title">
                                 Information
@@ -91,7 +93,7 @@
             </form>
 
         </div>
-        <div class="col-6">
+        <div class="col-md-12 col-lg-6">
             <div class="col-12 section-bubble-content">
                 @foreach (Appointment appointment in Model.AppointmentSitters)
                 {
