--- a/web3_tp_final/web3_tp_final/Views/Shared/_Layout.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Shared/_Layout.cshtml
@@ -104,8 +104,11 @@
         </main>
     </div>
     <footer id="footer">
-        <div class="container-fluid">
+        <div class="container-fluid text-left">
             &copy; 2021 - web3_tp_final - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        </div>
+        <div class="container-fluid text-right">
+            Par: Bryan Valdiviezo, Jade Traverse-L'Heureux, Nicholas Lachapelle et Christian Méthot 
         </div>
     </footer>
     <script>
