--- a/web3_tp_final/web3_tp_final/Views/FindSitter/_Form.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/FindSitter/_Form.cshtml
@@ -2,7 +2,7 @@
 <div class="row">
     <div class="col-12 mt-3" id="AppointmentFormErrorAlert">
         <div class="alert alert-danger" role="alert">
-            No availabilities found for those dates
+            Aucun gardien disponible à cette période
         </div>
     </div>
     <form asp-action="Create" asp-route-id="@ViewBag.sitter.UserID" class="col-12 needs-validation" id="AppointmentForm" novalidate>
