--- a/web3_tp_final/web3_tp_final/Views/FindSitter/_AvailableSittersList.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/FindSitter/_AvailableSittersList.cshtml
@@ -2,7 +2,7 @@
 
 @if (Model.Count() == 0)
 {
-    <p>No sitters available for those dates</p>
+    <div class="jumbotron text-center m-4">Aucun gardien n'est disponible pendant cette période</div>
 }
 else
 {
