--- a/web3_tp_final/web3_tp_final/Views/Shared/_Layout.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Shared/_Layout.cshtml
@@ -72,8 +72,8 @@
                         @if (ViewBag.CurrentUser != null)
                         {
                             <li class="nav-item dropdown website-navbar-link">
-                                <a class="nav-link text-white dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Account
+                                <a class="nav-link text-white dropdown-toggle mr-4" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    Compte
                                 </a>
                                 <div class="dropdown-menu website-navbar-dropdown" aria-labelledby="navbarDropdownMenuLink">
                                     <a class="dropdown-item" asp-controller="Users" asp-action="Details" asp-route-id="@ViewBag.CurrentUser.UserID">Profil</a>
@@ -93,7 +93,6 @@
             <div aria-live="polite" aria-atomic="true" class="notification-center">
                 <!-- Position it -->
                 <div style="position: absolute; top: 0; right: 0;" id="notification-section">
-
                     <!-- Then put toasts within -->
                 </div>
             </div>
@@ -104,13 +103,15 @@
         </main>
     </div>
     <footer id="footer">
-        <div class="container-fluid text-left">
-            &copy; 2021 - web3_tp_final - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        <div class="split m-4 p-4">
+            <div class="text-left justify-content-center">
+                &copy; 2021 - web3_tp_final - <a asp-area="" asp-controller="Home" asp-action="Privacy">Confidentialité</a>
+            </div>
+            <div class="text-right justify-content-center">
+                Par: Bryan Valdiviezo, Jade Traverse-L'Heureux, Nicholas Lachapelle et Christian Méthot
+            </div>
         </div>
-        <div class="container-fluid text-right">
-            Par: Bryan Valdiviezo, Jade Traverse-L'Heureux, Nicholas Lachapelle et Christian Méthot 
-        </div>
-    </footer>
+</footer>
     <script>
         SetUserConnection('@(ViewBag.CurrentUser == null ? 0 : ViewBag.CurrentUser.UserID)');
     </script>
