--- a/web3_tp_final/web3_tp_final/Views/Shared/_ToastNotification.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Shared/_ToastNotification.cshtml
@@ -3,13 +3,13 @@
 <div class="toast toast-width" role="alert" data-delay="100000" aria-live="assertive" aria-atomic="true" id="Notification_Appointment_@Model.AppointmentID">
     <div class="toast-header">
         <i class="fab fa-wpforms mr-2"></i>
-        <strong class="mr-auto toast-title">New Sitting Resquest</strong>
-        <small>just now</small>
-        <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+        <strong class="mr-auto toast-title">Nouvelle requête de gardiennage</strong>
+        <small>À l'instant</small>
+        <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Fermer">
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
     <div class="toast-body">
-        <a href="/Users/@Model.Sitter.UserID/Appointments/@Model.AppointmentID">New Sitting request received by @Model.Owner.UserName.</a>
+        <a href="/Users/@Model.Sitter.UserID/Appointments/@Model.AppointmentID">Nouvelle requête de gardiennage reçue par @Model.Owner.UserName.</a>
     </div>
 </div>
