Adjusted layout for login and signup

--- a/web3_tp_final/web3_tp_final/Views/FindSitter/Index.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/FindSitter/Index.cshtml
@@ -32,10 +32,10 @@
         <div class="col-12" id="AvailableSittersList">
             @await Html.PartialAsync("_AvailableSittersList", Model)
         </div>
+    </div>
 </div>
 
 <script>
-    $('#website-body').addClass('website-background');
 
     $('#FindAvailableSittersFilter').submit(function (e) {
 
