--- a/web3_tp_final/web3_tp_final/Views/Login/Index.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Login/Index.cshtml
@@ -1,60 +1,61 @@
 @model web3_tp_final.Models.User
 @using web3_tp_final.Helpers;
 
-@{ ViewData["Title"] = "Login"; }
-@{ Layout = "_Navbar-default";}
-
-<div style="background-image: url('https://imagesvc.meredithcorp.io/v3/mm/image?q=85&c=sc&poi=%5B820%2C706%5D&w=2000&h=1000&url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F47%2F2021%2F06%2F01%2Fdogs-at-dog-park-107903002-2000.jpg'); background-size: cover; background-position: top center; min-height: 100vh;">
-    <div class="section section-signup blur">
-        <div class="container">
-            <div class="row">
-                <div class="card card-signup" data-background-color="brown">
-                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                    <form class="form" asp-action="Login">
-                        <div class="card-header text-center">
-                            <h3 class="card-title title-up">Log in</h3>
-                            <div class="social-line">
-                                <a href="#pablo" class="btn btn-neutral btn-facebook btn-icon btn-round">
-                                    <i class="fab fa-facebook-square"></i>
-                                </a>
-                                <a href="#pablo" class="btn btn-neutral btn-twitter btn-icon btn-lg btn-round">
-                                    <i class="fab fa-twitter"></i>
-                                </a>
-                                <a href="#pablo" class="btn btn-neutral btn-google btn-icon btn-round">
-                                    <i class="fab fa-google-plus"></i>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <div class="input-group no-border">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text">
-                                        <i class="now-ui-icons users_circle-08"></i>
-                                    </span>
-                                </div>
-                                <input asp-for="UserName" class="form-control" placeholder="Username..." name="username">
-                            </div>
-                            <span asp-validation-for="UserName" class="text-danger" data-color="caramel"></span>
-                            <div class="input-group no-border">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text">
-                                        <i class="now-ui-icons ui-1_lock-circle-open"></i>
-                                    </span>
-                                </div>
-                                <input type="password" asp-for="Password" class="form-control" placeholder="Password..." name="password">
-                            </div>
-                            <span asp-validation-for="Password" class="text-danger" data-color="caramel"></span>
-                        </div>
-                        <span class="text-danger" data-color="caramel">@Html.Raw(ViewBag.UserId)</span>
-                        <div class="card-footer text-center">
-                            <input type="submit" value="LogIn" class="btn btn-neutral btn-round btn-lg" />
-                        </div>
-                        <div class="card-footer text-center" style="margin-top: 0px; padding-top: 0px">
-                            <a asp-action="CreateAccount" class="text-danger" data-color="caramel"> Don't have an account ? </a>
-                        </div>
-                    </form>
+<div class="d-flex" id="LoginContainer">
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    
+    <div class="log-card">
+        <form asp-action="Login">
+            <div class="log-header">
+                <h3>Log in</h3>
+                <div class="row no-gutters">
+                    <div class="col-4 text-right">
+                        <a href="">
+                            <i class="fab fa-facebook facebook-icon"></i>
+                        </a>
+                    </div>
+                    <div class="col-4">
+                        <a style="padding: 20px;" href="">
+                            <i class="fab fa-twitter twitter-icon"></i>
+                        </a>
+                    </div>
+                    <div class="col-4 text-left">
+                        <a href="">
+                            <i class="fab fa-google-plus google-icon"></i>
+                        </a>
+                    </div>
                 </div>
             </div>
-        </div>
+
+            <div class="log-content">
+                <div class="row">
+                    <div class="input-group col-12">
+                        <div class="input-group-text input-left-icon input-color">
+                            <span>
+                                <i class="fas fa-user"></i>
+                            </span>
+                        </div>
+                        <input asp-for="UserName" class="form-control input-with-left-icon input-color" placeholder="Username..." name="username">
+                        <span asp-validation-for="UserName" class="text-danger" data-color="caramel"></span>
+                    </div>
+                    <div class="input-group col-12">
+                        <div class="input-group-text input-left-icon input-color">
+                            <span>
+                                <i class="fas fa-key"></i>
+                            </span>
+                        </div>
+                        <input type="password" asp-for="Password" class="form-control input-with-left-icon input-color" placeholder="Password..." name="password">
+                        <span asp-validation-for="Password" class="text-danger" data-color="caramel"></span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="log-footer text-center">
+                <div class="form-group text-center">
+                    <input type="submit" class="submit" value="Log In" />
+                </div>
+                <a asp-action="CreateAccount" class="text-danger" data-color="caramel"> Don't have an account ? </a>
+            </div>
+        </form>
     </div>
 </div>
