--- a/web3_tp_final/web3_tp_final/wwwroot/css/mystyle.css
+++ b/web3_tp_final/web3_tp_final/wwwroot/css/mystyle.css
@@ -416,3 +416,113 @@ section {
 #AppointmentFormErrorAlert {
     display: none;
 }
+
+.wrapper {
+    min-height: 100%;
+    padding-bottom: 40px;
+    display: flex;
+    flex-flow: column;
+}
+
+#sap-footer {
+    height: 40px;
+    margin-top: -40px;
+}
+
+#LoginContainer {
+    align-items: center;
+    justify-content: center;
+    flex-grow: 1;
+}
+
+.log-card {
+    background-color: rgba(107, 59, 43, 0.9);
+    padding: 50px 20px 20px 20px;
+    border-radius: 20px;
+    width: 25%;
+}
+
+.log-header {
+    color: white;
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.log-header a {
+    border-radius: 30px;
+    background-color: white;
+    padding: 10px;
+}
+
+.log-header h3 {
+    font-weight: 100;
+    color: white;
+}
+
+.facebook-icon {
+    color: #3a5897;
+}
+
+.twitter-icon {
+    color: #55acee;
+}
+
+.google-icon {
+    color: #dd4b39;
+}
+
+.log-footer {
+    padding-top: 40px;
+    color : orange !important;
+}
+
+.log-footer a {
+    color: #e09650 !important;
+}
+
+.input-group-prepend {
+    align-items: center;
+}
+
+.log-card input {
+    border: medium none;
+    border-radius: 30px;
+}
+
+.log-card input:focus {
+    outline:none !important;
+    -webkit-appearance: none;
+    box-shadow: none !important;
+}
+
+.log-card .input-color {
+    background-color: rgba(255, 255, 255, 0.1);
+    color: white !important;
+}
+
+.input-left-icon {
+    border-radius: 30px 0 0 30px;
+    border: none;
+    margin-bottom: 10px !important;
+}
+
+.input-with-left-icon {
+    border-radius: 0 30px 30px 0 !important;
+    margin-bottom: 10px !important;
+}
+
+.log-card .submit {
+    color: #e09650 !important;
+    font-weight: 100;
+    padding: 10px 45px;
+}
+
+.log-card ::placeholder {
+    color: white;
+}
+
+.log-card .text-danger {
+    color: #e09650 !important;
+    text-align: center;
+    font-size: 15px;
+}
