--- a/web3_tp_final/web3_tp_final/Views/Pets/Delete.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Pets/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Désinscrire</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Êtes-vous certain de vouloir désinscire cet animal?</h3>
 <div>
     <h4>Pet</h4>
     <hr />
@@ -33,7 +33,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="PetID" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Désinscrire" class="btn btn-danger" /> |
+        <a asp-action="Index">Retour à la liste</a>
     </form>
 </div>
