--- a/web3_tp_final/web3_tp_final/wwwroot/css/mystyle.css
+++ b/web3_tp_final/web3_tp_final/wwwroot/css/mystyle.css
@@ -155,6 +155,10 @@ section {
     color: var(--clr-neutral-100);
 }
 
+.background-dog-blurred {
+    background-image: url("../images/dog_background.webp");
+}
+
 .p-header {
     font-size: 1rem;
     margin-bottom: 0 em;
