Changed Sitter for Availability

--- a/web3_tp_final/web3_tp_final/Views/Shared/_Layout.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
                     @if (ViewBag.CurrentUser != null)
                     {
                         <li class="nav-item website-navbar-link">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Sitter" asp-action="Index">Devenir gardien</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Availability" asp-action="Index">Devenir gardien</a>
                         </li>
                         <li class="nav-item website-navbar-link">
                             <a class="nav-link text-white" asp-area="" asp-controller="Pets" asp-action="Index">Mes animaux</a>
