--- a/web3_tp_final/web3_tp_final/wwwroot/css/mystyle.css
+++ b/web3_tp_final/web3_tp_final/wwwroot/css/mystyle.css
@@ -515,6 +515,9 @@ section {
     color: #e09650 !important;
     font-weight: 100;
     padding: 10px 45px;
+    background-color: white;
+    border-radius: 30px;
+    border: none;
 }
 
 .log-card ::placeholder {
@@ -525,4 +528,13 @@ section {
     color: #e09650 !important;
     text-align: center;
     font-size: 15px;
+}
+
+#SignUpCard {
+    display: none;
+    opacity: 0;
+}
+
+#LogInAlert {
+    display: none;
 }
